<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="35dp"
        android:id="@+id/editTitle"
        android:hint="@string/title_hint"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textImeMultiLine"
        android:ems="10"
        android:layout_below="@+id/editTitle"
        android:layout_alignLeft="@+id/editTitle"
        android:layout_alignStart="@+id/editTitle"
        android:id="@+id/editDescription"
        android:layout_marginTop="35dp"
        android:hint="@string/description_hint"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnOK"
        android:layout_alignEnd="@+id/btnOK"/>

    <CheckBox
        android:text="@string/idea_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editDescription"
        android:layout_alignLeft="@+id/editDescription"
        android:layout_alignStart="@+id/editDescription"
        android:layout_marginTop="35dp"
        android:id="@+id/checkBoxIdea"/>

    <CheckBox
        android:text="@string/todo_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxIdea"
        android:layout_alignLeft="@+id/checkBoxIdea"
        android:layout_alignStart="@+id/checkBoxIdea"
        android:layout_marginTop="35dp"
        android:id="@+id/checkBoxToDo"/>


    <CheckBox
        android:text="@string/important_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxToDo"
        android:layout_alignLeft="@+id/checkBoxToDo"
        android:layout_alignStart="@+id/checkBoxToDo"
        android:layout_marginTop="35dp"
        android:id="@+id/checkBoxImportant"/>

    <Button
        android:text="@string/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnOK"
        android:layout_alignBaseline="@+id/btnCancel"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCapture"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnCancel"
        android:layout_alignStart="@+id/btnCancel"
        android:text="@string/capture_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/save_button"/>

    <Button
        android:text="@string/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btnCancel"
        android:hint="capture"
        android:layout_below="@+id/checkBoxImportant"
        android:layout_alignLeft="@+id/checkBoxImportant"
        android:layout_alignStart="@+id/checkBoxImportant"/>

</RelativeLayout>