<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="calc.aca.android.zidansuid.com.notetoself.SettingsActivity">

    <TextView
        android:text="@string/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView3"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anims_title"
        android:ems="10"
        android:layout_marginTop="18dp"
        android:id="@+id/editText3"
        android:layout_below="@+id/checkBoxSound"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:text="@string/rb_fast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioFast"
            android:layout_weight="1"/>

        <RadioButton
            android:text="@string/rb_slow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioSlow"
            android:layout_weight="1"/>

        <RadioButton
            android:text="@string/rb_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioNone"
            android:layout_weight="1"/>

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/sound_title"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/checkBoxSound"
        android:layout_alignEnd="@+id/checkBoxSound"
        android:hint="Sound FX"
        tools:text="Sound FX"/>

    <CheckBox
        android:text="@string/sound_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxSound"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
